--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/nectr-logo.png" />
     <link rel="apple-touch-icon" href="/nectr-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nectr</title>
+    <title>Nektr</title>
   </head>
   <body>
     <div id="root"></div>
